# Moriarty

./: .gitignore  README.md  pyproject.toml  requirements.txt
QuteVM/: README.md
QuteVM/gui/: factory.py  pages.py  ui.py
QuteVM/src/: config.py  main.py
src/: config.py  main.py
src/gui/: __init__.py  descriptions.py  factory.py  navigate.py  pages.py  ui.py
src/gui/pages/: base.py  page0.py  page1.py  page10.py  page11.py  page12.py  page2.py  page3.py  page4.py  page5.py  page6.py  page7.py  page8.py  page9.py
src/tests/: __init__.py  test.py  test1.py  test10.py  test11.py  test12.py  test2.py  test3.py  test4.py  test5.py  test5_template.py  test6.py  test7.py  test8.py  test9.py
