[project]
name = "Moriarty"
version = "1.0.0"
description = "This project help you to train an EVM's thinking"
license = { text = "GPL-3.0-only", file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "FatalX2080", email = "gester.vs.sans.vs.chra@gmail.com" }
]
dependencies = [
  "flet==0.27.6",
  "numpy==1.26.4"
]

[tool.flet]
org = ""
product = "Moriarty"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}